<resources>
    <string name="app_name">DAILAB</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="token_id">763518855146-01e1cokhsnmddoq54rnj9susbaami0f9.apps.googleusercontent.com</string>
    <string name="server_client_id">763518855146-01e1cokhsnmddoq54rnj9susbaami0f9.apps.googleusercontent.com</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="compose_shortcut_short_label1">Dailab Chat Room</string>
    <string name="compose_shortcut_long_label1">Ask your Questions.</string>

    <string name="compose_shortcut_short_label2">Dailab @ AIST</string>
    <string name="compose_shortcut_long_label2">Dailab @ AIST</string>

    <string name="compose_shortcut_short_label3">Dailab @ IITD</string>
    <string name="compose_shortcut_long_label3">Dailab @ IITD</string>


    <string name="compose_shortcut_short_label4">Programs</string>
    <string name="compose_shortcut_long_label4">Dailab Programs</string>
    <string name="compose_disabled_message1">Disabled</string>
</resources>
